--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ header {
 }
 
 .logo {
-    background: url("../images/DSC15.jpg");
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
